// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots 🖤 deprecated Components/Buttons/FabButton Fab Button Example 1`] = `
Array [
  .c2 {
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 24px;
  color: #FFFFFF;
}

.c3 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  top: 100%;
  white-space: nowrap;
  color: #424242;
}

.c0.c0 {
  min-height: 0;
  background-color: #A14B00;
  min-width: 60px;
  width: auto;
  height: 60px;
  box-shadow: 0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12);
  font-size: 0.75rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 16px;
  color: #fff;
}

.c0.c0 .RcFabButtonTouchRipple-rippleVisible {
  color: rgb(179,111,51);
  opacity: 0.08;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-animation-name: fuMrAI;
  animation-name: fuMrAI;
}

.c0.c0[disabled] {
  background-color: #B9B9B9;
  color: #fff;
  box-shadow: 0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12);
  opacity: NaN;
}

.c0.c0:hover,
.c0.c0:active {
  background-color: rgb(144,67,0);
}

<button
    aria-describedby={null}
    className="MuiButtonBase-root MuiFab-root c0 buttonWrapper"
    disabled={false}
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    title="forward"
    type="button"
  >
    <span
      className="MuiFab-label"
    >
      <span
        className="c1 forward icon"
      >
        <svg
          className="c2"
          viewBox="0 0 32 32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17.101 6.101a.999.999 0 000 1.414L24.586 15H5a1 1 0 000 2h19.588L17.1 24.486a.999.999 0 101.414 1.414l9.192-9.192a.999.999 0 000-1.414l-9.192-9.192a.999.999 0 00-1.414 0z"
          />
        </svg>
        
      </span>
      <span
        className="c3"
      >
        a123
      </span>
    </span>
    <span
      className="MuiTouchRipple-root"
    />
  </button>,
  .c2 {
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 24px;
  color: #32773B;
}

.c0.c0 {
  min-height: 0;
  background-color: #FFFFFF;
  min-width: 60px;
  width: auto;
  height: 60px;
  box-shadow: 0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12);
  font-size: 0.75rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 16px;
  color: #32773B;
}

.c0.c0 .RcFabButtonTouchRipple-rippleVisible {
  color: rgb(91,146,98);
  opacity: 0.08;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-animation-name: fuMrAI;
  animation-name: fuMrAI;
}

.c0.c0[disabled] {
  background-color: #B9B9B9;
  color: #fff;
  box-shadow: 0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12);
  opacity: NaN;
}

.c0.c0:hover,
.c0.c0:active {
  background-color: rgb(234,241,235);
}

<button
    className="MuiButtonBase-root MuiFab-root c0 "
    disabled={false}
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiFab-label"
    >
      <span
        className="c1 previous icon"
      >
        <svg
          className="c2"
          viewBox="0 0 32 32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14.899 6.101a.999.999 0 010 1.414L7.413 15h19.586a1 1 0 010 2H7.411l7.488 7.486a.999.999 0 11-1.414 1.414l-9.192-9.192a.999.999 0 010-1.414l9.192-9.192a.999.999 0 011.414 0z"
          />
        </svg>
        
      </span>
    </span>
    <span
      className="MuiTouchRipple-root"
    />
  </button>,
  .c2 {
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 24px;
  color: #066FAC;
}

.c3 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  top: 100%;
  white-space: nowrap;
  color: #424242;
}

.c0.c0 {
  min-height: 0;
  background-color: #FFFFFF;
  min-width: 60px;
  width: auto;
  height: 60px;
  box-shadow: 0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12);
  font-size: 0.75rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 16px;
  color: #066FAC;
}

.c0.c0 .RcFabButtonTouchRipple-rippleVisible {
  color: rgb(55,139,188);
  opacity: 0.08;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-animation-name: fuMrAI;
  animation-name: fuMrAI;
}

.c0.c0[disabled] {
  background-color: #B9B9B9;
  color: #fff;
  box-shadow: 0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12);
  opacity: NaN;
}

.c0.c0:hover,
.c0.c0:active {
  background-color: rgb(230,240,246);
}

<button
    className="MuiButtonBase-root MuiFab-root c0 "
    disabled={false}
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiFab-label"
    >
      <span
        className="c1 forward icon"
      >
        <svg
          className="c2"
          viewBox="0 0 32 32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17.101 6.101a.999.999 0 000 1.414L24.586 15H5a1 1 0 000 2h19.588L17.1 24.486a.999.999 0 101.414 1.414l9.192-9.192a.999.999 0 000-1.414l-9.192-9.192a.999.999 0 00-1.414 0z"
          />
        </svg>
        
      </span>
      <span
        className="c3"
      >
        start
      </span>
    </span>
    <span
      className="MuiTouchRipple-root"
    />
  </button>,
  .c3 {
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 24px;
  color: #066FAC;
}

.c5 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  top: 100%;
  white-space: nowrap;
  color: #424242;
}

.c0.c0 {
  min-height: 0;
  background-color: #FFFFFF;
  min-width: 60px;
  width: auto;
  height: 60px;
  box-shadow: 0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12);
  font-size: 0.75rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 16px;
  color: #066FAC;
}

.c0.c0 .RcFabButtonTouchRipple-rippleVisible {
  color: rgb(55,139,188);
  opacity: 0.08;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-animation-name: fuMrAI;
  animation-name: fuMrAI;
}

.c0.c0[disabled] {
  background-color: #B9B9B9;
  color: #fff;
  box-shadow: 0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12);
  opacity: NaN;
}

.c0.c0:hover,
.c0.c0:active {
  background-color: rgb(230,240,246);
}

.c4.c4 {
  margin-left: 4px;
  font-size: 0.9375rem;
  font-weight: 700;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
}

.c1.c1 {
  padding: 0 12px;
  border-radius: 16px;
}

<button
    className="MuiButtonBase-root MuiFab-root c0 c1 "
    disabled={false}
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiFab-label"
    >
      <span
        className="c2 forward icon"
      >
        <svg
          className="c3"
          viewBox="0 0 32 32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17.101 6.101a.999.999 0 000 1.414L24.586 15H5a1 1 0 000 2h19.588L17.1 24.486a.999.999 0 101.414 1.414l9.192-9.192a.999.999 0 000-1.414l-9.192-9.192a.999.999 0 00-1.414 0z"
          />
        </svg>
        
      </span>
      <span
        className="c4"
      >
        Test
      </span>
      <span
        className="c5"
      >
        start
      </span>
    </span>
    <span
      className="MuiTouchRipple-root"
    />
  </button>,
]
`;

exports[`Storyshots 🖤 deprecated Components/Buttons/FabButton FabButton 1`] = `
.c2 {
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 24px;
  color: #066FAC;
}

.c3 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  top: 100%;
  white-space: nowrap;
  color: #424242;
}

.c0.c0 {
  min-height: 0;
  background-color: #FFFFFF;
  min-width: 60px;
  width: auto;
  height: 60px;
  box-shadow: 0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12);
  font-size: 0.75rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 16px;
  color: rgba(0,0,0,0.87);
}

.c0.c0 .RcFabButtonTouchRipple-rippleVisible {
  color: rgb(255,255,255);
  opacity: 0.08;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-animation-name: fuMrAI;
  animation-name: fuMrAI;
}

.c0.c0[disabled] {
  background-color: #B9B9B9;
  color: rgba(0,0,0,0.87);
  box-shadow: 0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12);
  opacity: NaN;
}

.c0.c0:hover,
.c0.c0:active {
  background-color: rgb(229,229,229);
}

<button
  aria-describedby={null}
  className="MuiButtonBase-root MuiFab-root c0 buttonWrapper"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  title="previous"
  type="button"
>
  <span
    className="MuiFab-label"
  >
    <span
      className="c1 previous icon"
    >
      <svg
        className="c2"
        viewBox="0 0 32 32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.899 6.101a.999.999 0 010 1.414L7.413 15h19.586a1 1 0 010 2H7.411l7.488 7.486a.999.999 0 11-1.414 1.414l-9.192-9.192a.999.999 0 010-1.414l9.192-9.192a.999.999 0 011.414 0z"
        />
      </svg>
      
    </span>
    <span
      className="c3"
    >
      title
    </span>
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;
